<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cs428.app.bookapp.activity.fragments.HomeFragment">

    <LinearLayout
        android:id="@+id/toolbar_actions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/friends_nav_button"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:background="@color/secondaryLightColor"
            android:contentDescription="@string/nav_item_friends"
            android:src="@drawable/ic_people" />

        <ImageButton
            android:id="@+id/home_nav_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:background="@color/secondaryColor"
            android:contentDescription="@string/nav_item_home"
            android:src="@drawable/ic_home" />

        <ImageButton
            android:id="@+id/books_nav_button"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:background="@color/secondaryLightColor"
            android:contentDescription="@string/nav_item_books"
            android:src="@drawable/ic_bookmark" />
    </LinearLayout>

</RelativeLayout>